# incoherence

./: .firebaserc  .gitignore  Cargo.toml  README.md  firebase.json  pyproject.toml  values.toml
cities/: hull.toml
crates/hull-analysis/: Cargo.toml
crates/hull-analysis/src/: lib.rs  report.rs  timeline.rs
crates/incoherence-analysis/: Cargo.toml
crates/incoherence-analysis/src/: institution.rs
python/incoherence/: __init__.py  cli.py  config.py  dedup.py  orchestrator.py  ratelimit.py  server.py
python/incoherence/analysis/: coherence.py  got_bridge.py  temporal.py
python/incoherence/discovery/: __init__.py  council_minutes.py  council_news.py  cqc.py  environment_agency.py  fingertips.py  housing.py  jsna.py  land_registry.py  lginform.py  nomis.py  oflog.py  planning.py  police.py  theyworkforyou.py  whatdotheyknow.py
python/incoherence/extraction/: claims.py  classifier.py  embeddings.py  fingertips.py  lginform.py  outcomes.py  police.py  rules.py
python/incoherence/graph/: model.py  queries.py  storage.py
python/incoherence/scraper/: browser.py  council.py  fingertips.py  foi.py  lginform.py  minutes.py  news.py  police.py  wdtk.py
python/tests/: test_graph.py
scripts/: analyse.py  seed.py
web/: index.html
web/api/: coherence-history.json  config.json  contradictions.json  graph.json  timeline.json
web/css/: dashboard.css
web/js/: app.js  chat.js  coherence-chart.js  contradiction-panel.js  knowledge-graph.js  timeline.js
