[project]
name = "incoherence"
version = "0.1.0"
description = "Institutional incoherence detector — any city, config-driven"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
scrape = [
    "playwright>=1.48",
]

[project.scripts]
incoherence = "incoherence.cli:main"
hull = "incoherence.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
line-length = 100
