[package]
name = "incoherence-analysis"
version = "0.1.0"
edition = "2021"
description = "Institutional incoherence detector using Geometry of Trust"

[dependencies]
got-core = { git = "https://github.com/jade-codes/got" }
got-incoherence = { git = "https://github.com/jade-codes/got" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
